--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -28,7 +28,13 @@ services:
         resource: '../../src/AppBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
-
+        
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        public: false
+        tags:
+            - { name: twig.extension }
+    
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
