--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -35,6 +35,10 @@ services:
         tags:
             - { name: twig.extension }
     
+    AppBundle\Service\::
+        class: 'initializeAgenda'
+        arguments: [ "@doctrine.orm.entity_manager" ]
+    
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
