--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,18 +3,18 @@
 security:
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-    providers:
-        in_memory:
-            memory: ~
+    #providers:
+        #in_memory:
+            #memory: ~
 
-    firewalls:
+    #firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+        #dev:
+            #pattern: ^/(_(profiler|wdt)|css|images|js)/
+            #security: false
 
-        main:
-            anonymous: ~
+       # main:
+            #anonymous: ~
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
@@ -22,3 +22,22 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
+    
+    encoders:
+        AppBundle\Entity\User:
+            algorithm: bcrypt
+            
+    providers:
+        our_db_provider:
+            entity:
+                class: AppBundle:User
+                property: username
+                # if you're using multiple entity managers
+                # manager_name: customer
+
+    firewalls:
+        main:
+            anonymous: ~
+            pattern:    ^/
+            http_basic: ~
+            provider: our_db_provider
