--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -47,4 +47,5 @@ security:
             
     access_control:
         # require ROLE_ADMIN for /admin*
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/, roles: ROLE_ADMIN }
