--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -35,12 +35,16 @@ services:
         tags:
             - { name: twig.extension }
     
-    AppBundle\Service\::
+    AppBundle\Service\:
         class: 'initializeAgenda'
         arguments: [ "@doctrine.orm.entity_manager" ]
         
-    AppBundle\Service\::
+    AppBundle\Service\:
         class: 'historyAgenda'
+        arguments: [ "@doctrine.orm.entity_manager" ]
+        
+    AppBundle\Service\:
+        class: 'checkRules'
         arguments: [ "@doctrine.orm.entity_manager" ]
     
     # add more services, or override services that need manual wiring
