--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -53,4 +53,4 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/valideur, roles: ROLE_VALIDEUR }
-        - { path: ^/agent, roles: ROLE_AGENT }
+        - { path: ^/agentAuth, roles: ROLE_AGENT }
