--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,14 +43,14 @@ security:
             provider: our_db_provider
             form_login:
                 login_path: login
-                check_path: login                    
+                check_path: login
             logout:
                 path:   /logout
                 target: /
             
     access_control:
         # require ROLE_ADMIN for /admin*
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/valideur, roles: ROLE_VALIDEUR }
         - { path: ^/agentAuth, roles: ROLE_AGENT }
