--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -50,7 +50,8 @@ security:
             
     access_control:
         # require ROLE_ADMIN for /admin*
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/valideur, roles: ROLE_VALIDEUR }
         - { path: ^/agentAuth, roles: ROLE_AGENT }
