--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -51,7 +51,7 @@ security:
     access_control:
         # require ROLE_ADMIN for /admin*
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^, roles: IS_AUTHENTICATED_FULLY }
+        #- { path: ^, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/valideur, roles: ROLE_VALIDEUR }
         - { path: ^/agentAuth, roles: ROLE_AGENT }
